[gd_scene load_steps=7 format=3 uid="uid://cq8y4l8uapojy"]

[ext_resource type="Script" uid="uid://bn0w6hkd0jgv6" path="res://Scripts/UI/Dialogue_Player.gd" id="1_xcud3"]
[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="2_rodwx"]
[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="3_h75l1"]
[ext_resource type="Texture2D" uid="uid://d2m66tlt5cl4b" path="res://Assets/artificial-hive.png" id="4_kc08c"]
[ext_resource type="PackedScene" uid="uid://dp5ghsxs3xitl" path="res://Scenes/Dialogue/linetest.tscn" id="5_j0ljn"]
[ext_resource type="AudioStream" uid="uid://bmcuncv0xwe2k" path="res://Assets/Sounds/TextSound.mp3" id="5_p12ba"]

[node name="PanelContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xcud3")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 95.0
offset_top = -171.0
offset_right = -95.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("2_rodwx")
theme_override_styles/panel = ExtResource("3_h75l1")

[node name="Label" type="Label" parent="PanelContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
autowrap_mode = 2

[node name="LineDrawer" parent="." instance=ExtResource("5_j0ljn")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
offset_left = -133.0
offset_top = -104.0
offset_right = -13.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = ExtResource("3_h75l1")
OrientationUpDown = false
Speed = 20.0
amplitude = 10.0
waveform_points = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = -201.0
offset_right = 171.0
offset_bottom = -150.0
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("2_rodwx")
theme_override_styles/panel = ExtResource("3_h75l1")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_kc08c")
expand_mode = 1

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "fawfwa"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -59.0
offset_right = 103.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 70
alignment = 1

[node name="Skip" type="Button" parent="HBoxContainer" groups=["DigitalButtons"]]
layout_mode = 2
theme = ExtResource("2_rodwx")
theme_override_font_sizes/font_size = 21
text = "SKIP"

[node name="Next" type="Button" parent="HBoxContainer" groups=["DigitalButtons"]]
layout_mode = 2
theme = ExtResource("2_rodwx")
theme_override_font_sizes/font_size = 21
text = "NEXT"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_p12ba")
volume_db = -5.0
bus = &"UI"

[connection signal="pressed" from="HBoxContainer/Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
